--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t jpwarren/docker-react -f Doverfile.dev .
+  - docker build -t jpwarren/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true jpwarren/docker-react npm run test
